implementacao adicionar requisito especifico
